@@ -7,6 +7,8 @@ Drupal 7.54, xxxx-xx-xx (development version)
 - Numerous API documentation improvements.
 - Logging of searches can now be disabled.
 - Added menu tree render structure to (pre-)process hooks for theme_menu_tree().
+- Fixed incorrect default value for short and medium date formats on the date
+  type configuration page.
 
 Drupal 7.53, 2016-12-07
 -----------------------
